Fixed Home page sign in form overlapping.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -125,7 +125,7 @@ nav.navbar {
 }
 
 .sign-form {
-  height: 305px;
+  height: 325px;
 }
 
 .modal-md, .modal-md .modal-content{
